Fix the alignment for the beer description info

--- a/css/theme.css
+++ b/css/theme.css
@@ -38,6 +38,10 @@ html {
   margin-top: 4em;
 }
 
+.beer-description-info {
+  text-align: right;
+}
+
 @media only screen and (min-width: 25em) {
 
   .catalogue-des {
